adding features and js functions and completing this project

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>I am a YouTuber</h1>
-    </div>
+    <div class="container"></div>
+    <script src="./index.js"></script>
   </body>
 </html>
